# LGL-Uplink-Portal

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.supervisor  README.md  SPEC.md  TODO.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build.yml
config/: ingest.example.toml  uplink.dev.toml  uplink.example.toml
config/cloudflared/: .gitignore  config.yml
docs/: virtual-rack.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AddDestPanel.tsx  AddRedistributePanel.tsx  AddSourcePanel.tsx  DestNode.tsx  DestinationsPage.tsx  DeviceCard.tsx  DeviceDetail.tsx  DeviceGrid.tsx  EnrollmentPanel.tsx  Login.tsx  Patchbay.tsx  RackPatchbay.tsx  Redistribute.tsx  RoutingEdge.tsx  SourceNode.tsx  VirtualRack.tsx
ingest-dest/: Cargo.toml
ingest-dest/src/: main.rs
ingest-dest/src/destinations/: hls.rs  mod.rs  recorder.rs  rtmp.rs  srt_push.rs
ingest-source/: Cargo.toml
ingest-source/src/: main.rs
ingest-source/src/sources/: encoder.rs  mod.rs  srt_listen.rs  srt_pull.rs  test_pattern.rs
ingest-supervisor/: Cargo.toml  config.toml
ingest-supervisor/src/: config.rs  main.rs  port_pool.rs  routing.rs  supervisor.rs
ingest-supervisor/src/api/: mod.rs
ingest-sync/src/: coordinator.rs
migrations/: 001_create_organizations.sql  001_users.sql  002_create_users.sql  002_devices.sql  003_create_devices.sql  003_sources.sql  004_create_assignments.sql  004_destinations.sql  005_create_control_claims.sql  005_routing.sql  006_create_telemetry.sql  006_telemetry.sql  007_audit_log.sql  007_create_audit_log.sql  009_device_nickname.sql  010_device_archived.sql  012_create_destinations.sql
server/: Dockerfile  package.json
server/src/: config.ts  db.ts  error.ts  index.ts  types.ts
server/src/api/: auth.ts  (+7 more)
src/: config.rs  config.ts  db.rs  db.ts  error.rs  error.ts  index.ts  main.rs  seed.ts  types.ts
src/api/: assignments.rs  assignments.ts  auth.rs  auth.ts  control.rs  control.ts  destinations.ts  devices.rs  devices.ts  mod.rs  organizations.rs  organizations.ts  telemetry.rs  telemetry.ts  users.rs  users.ts
src/auth/: jwt.rs  jwt.ts  middleware.rs  password.rs
src/jobs/: claim_expiry.rs  device_offline.rs  index.ts  mod.rs  telemetry_prune.rs
src/models/: assignment.rs  audit.rs  claim.rs  device.rs  mod.rs  organization.rs  telemetry.rs  user.rs
src/ws/: commands.rs  commands.ts  handler.rs  handler.ts  mod.rs  registry.rs  registry.ts
uplink-atem/atem_dumps/: README.md
uplink-atem/tools/: capture_emulator.py  debug_pvw_diff.py  dump.js  fetch_reference_data.py  parse_atem_commands.py
(+9 files in other folders)
