[package]
name = "ingest-source"
version = "0.1.0"
edition = "2021"
description = "LGL Ingest — source worker process"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "io-util"] }
