[package]
name = "ingest-supervisor"
version = "0.1.0"
edition = "2021"
description = "LGL Ingest — supervisor, routing, local REST API"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "process", "io-util", "sync"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
